Free of bug and all code for paper

--- a/2.hyperparameter optimisation.ipynb
+++ b/2.hyperparameter optimisation.ipynb
@@ -5,8 +5,9 @@
    "execution_count": null,
    "id": "88f790cf",
    "metadata": {
-    "jupyter": {
-     "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2025-03-24T21:28:16.832787Z",
+     "start_time": "2025-03-24T21:28:16.817819Z"
     },
     "tags": []
    },
@@ -40,10 +41,7 @@
    "id": "2a8d6272-708d-4709-8e35-5a84268bed64",
    "metadata": {},
    "source": [
-    "## Prediction ahead\n",
-    "\n",
-    "Datasets available :\n",
-    "\n",
+    "Forecasting datasets available :\n",
     "\n",
     "* MackeyGlass\n",
     "* Lorenz\n",
@@ -51,43 +49,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "facf8949-dfbb-4f46-870e-a4c9b2d6e181",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-11-15T16:15:20.089847Z",
-     "iopub.status.busy": "2024-11-15T16:15:20.089722Z",
-     "iopub.status.idle": "2024-11-15T16:15:20.596972Z",
-     "shell.execute_reply": "2024-11-15T16:15:20.596689Z",
-     "shell.execute_reply.started": "2024-11-15T16:15:20.089837Z"
-    },
-    "scrolled": true
-   },
-   "source": [
-    "from datasets.load_forecasting import load_dataset_forecasting\n",
-    "is_instances_classification = False\n",
-    "dataset_name = \"Lorenz\"\n",
-    "step_ahead=5\n",
-    "\n",
-    "is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test = load_dataset_forecasting(dataset_name, step_ahead, visualize=True)\n",
-    "use_spectral_representation = False\n",
-    "spectral_representation = None # Can be None, \"stft\" or \"mfcc\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "62039e22-856b-470e-9375-b4295e586564",
-   "metadata": {},
-   "source": [
-    "## Classification"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "16b2d29d-7fff-4032-8b36-559c722818b8",
    "metadata": {},
    "source": [
-    "Datasets available :\n",
+    "Classification Datasets available :\n",
     "\n",
     "* Custom :  FSDD, HAART, JapaneseVowels\n",
     "* Aeon : SpokenArabicDigits, CatsDogs, LSST\n",
@@ -100,16 +66,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3eb188a0-a9a2-4b94-af1e-5b50dd6b1cd6",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-24T21:29:11.112767Z",
+     "start_time": "2025-03-24T21:29:07.809433Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "from datasets.load_classification import load_dataset_classification\n",
-    "is_instances_classification = True\n",
-    "spectral_representation = \"mfcc\"  # Can be None, \"stft\" or \"mfcc\"\n",
-    "\n",
+    "from datasets.load_data import load_data as load_dataset\n",
+    "step_ahead=5\n",
     "dataset_name = \"FSDD\"\n",
     "\n",
-    "use_spectral_representation, is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name)\n",
+    "(is_instances_classification, is_multivariate, sampling_rate,\n",
+    "     X_train_raw, X_test_raw, Y_train_raw, Y_test,\n",
+    "     use_spectral_representation, spectral_representation,\n",
+    "     groups) = load_dataset(dataset_name, step_ahead, visualize=False)\n",
     "\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(16, 5))\n",
@@ -129,6 +101,10 @@
    "execution_count": null,
    "id": "615a38d2df41a727",
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-24T21:29:11.180679Z",
+     "start_time": "2025-03-24T21:29:11.178737Z"
+    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -136,14 +112,8 @@
    },
    "outputs": [],
    "source": [
-    "from reservoir.activation_functions import tanh, heaviside, sigmoid\n",
-    "\n",
-    "# the activation function choosen for the rest of the experiment\n",
-    "# activation_function = lambda x : sigmoid(2*(x-0.5))tanh(x)\n",
-    "activation_function = lambda x : tanh(x)\n",
-    "\n",
-    "plt.plot(np.linspace(0, 3, 100), activation_function(np.linspace(0, 3, 100)))\n",
-    "plt.grid()"
+    "from reservoir.activation_functions import tanh\n",
+    "activation_function = lambda x : tanh(x)"
    ]
   },
   {
@@ -184,7 +154,6 @@
     "\n",
     "# Define noise parameter\n",
     "noise_std = 0.001\n",
-    "\n",
     "\n",
     "nb_splits=3\n",
     "if is_instances_classification:\n",
@@ -410,7 +379,7 @@
     "    if function_name == \"hadsp\":\n",
     "        target_rate = trial.suggest_float('target_rate', 0.5, 1, step=0.01)\n",
     "        rate_spread = trial.suggest_float('rate_spread', 0.01, 0.4, step=0.005)\n",
-    "        method = trial.suggest_categorical(\"method\", [\"random_ee\", \"pearson\"])\n",
+    "        method = trial.suggest_categorical(\"method\", [\"random\", \"pearson\"])\n",
     "    # DESP\n",
     "    elif function_name == \"desp\":\n",
     "        variance_target = trial.suggest_float('variance_target', 0.001, 0.02, step=0.001)\n",
@@ -418,19 +387,19 @@
     "        intrinsic_saturation = trial.suggest_float('intrinsic_saturation', 0.8, 0.98, step=0.02)\n",
     "        intrinsic_coef = trial.suggest_float('intrinsic_coef', 0.8, 0.98, step=0.02)\n",
     "        method = trial.suggest_categorical(\"method\", [\"pearson\"])\n",
-    "    elif function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja\", \"anti_oja_fast\", \"ip-anti-oja\"]:\n",
+    "    elif function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja\", \"anti-oja_fast\", \"ip-anti-oja\", \"ip-anti-oja_fast\"]:\n",
     "        connectivity = trial.suggest_float('connectivity', 0, 1)\n",
     "        sr = trial.suggest_float('spectral_radius', 0.4, 1.6, step=0.01)\n",
     "    else:\n",
     "        raise ValueError(f\"Invalid function name: {function_name}\")\n",
     "\n",
-    "    if function_name in [\"ip_correct\", \"ip-anti-oja\"]:\n",
+    "    if function_name in [\"ip_correct\", \"ip-anti-oja\", \"ip-anti-oja_fast\"]:\n",
     "        mu = trial.suggest_float('mu', 0, 1)\n",
     "        sigma = trial.suggest_float('sigma', 0, 1)\n",
     "        learning_rate = trial.suggest_float('learning_rate', 1e-6, 1e-1, log=True)\n",
-    "    if function_name in [\"anti-oja\", \"anti_oja_fast\", \"ip-anti-oja\"]:\n",
+    "    if function_name in [\"anti-oja\", \"anti-oja_fast\", \"ip-anti-oja\", \"ip-anti-oja_fast\"]:\n",
     "        # We often use a log-uniform distribution for learning rates:\n",
-    "        oja_eta = trial.suggest_float('oja_eta', 1e-5, 1e-1, log=True)\n",
+    "        oja_eta = trial.suggest_float('oja_eta', 1e-8, 1e-3, log=True)\n",
     "\n",
     "    if function_name in [\"hadsp\", \"desp\"]:\n",
     "        connectivity = trial.suggest_float('connectivity', 0, 0)\n",
@@ -465,7 +434,7 @@
     "\n",
     "        # INITIALISATION AND UNSUPERVISED PRETRAINING\n",
     "        if function_name == \"random_ee\":\n",
-    "            Win, W, bias = init_matrices(n, input_connectivity, connectivity, K, w_distribution=stats.uniform(0, 1), seed=random.randint(0, 1000))\n",
+    "            Win, W, bias = init_matrices(n, input_connectivity, connectivity, K, w_distribution=stats.uniform(loc=0, scale=1), seed=random.randint(0, 1000))\n",
     "        else:\n",
     "            Win, W, bias = init_matrices(n, input_connectivity, connectivity, K, w_distribution=stats.uniform(loc=-1, scale=2), seed=random.randint(0, 1000))\n",
     "        bias *= bias_scaling\n",
@@ -486,7 +455,7 @@
     "                                         max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method=method,\n",
     "                                         intrinsic_saturation=intrinsic_saturation, intrinsic_coef=intrinsic_coef,\n",
     "                                         n_jobs=nb_jobs_per_trial)\n",
-    "        elif function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja\", \"ip-anti-oja\"]:\n",
+    "        elif function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja\", \"ip-anti-oja\", \"anti-oja_fast\", \"ip-anti-oja_fast\"]:\n",
     "            eigen = sparse.linalg.eigs(W, k=1, which=\"LM\", maxiter=W.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
     "            W *= sr / max(abs(eigen))\n",
     "        else:\n",
@@ -508,7 +477,7 @@
     "                                                  leaking_rate=leaky_rate, activation_function=activation_function,\n",
     "                                                  )\n",
     "            _ = reservoir.fit(unsupervised_pretrain, warmup=100)\n",
-    "        elif function_name == \"anti_oja_fast\":\n",
+    "        elif function_name == \"anti-oja_fast\":\n",
     "            reservoir = init_local_rule_reservoir(W, Win, bias, local_rule=\"anti-oja\", eta=oja_eta,\n",
     "                                                  synapse_normalization=False, bcm_theta=None,\n",
     "                                                  leaking_rate=leaky_rate, activation_function=activation_function,\n",
@@ -521,6 +490,13 @@
     "                                                     leaking_rate=leaky_rate, activation_function=activation_function,\n",
     "                                                     )\n",
     "            _ = reservoir.fit(unsupervised_pretrain, warmup=100)\n",
+    "        elif function_name == \"ip-anti-oja_fast\":\n",
+    "            reservoir = init_ip_local_rule_reservoir(W, Win, bias, local_rule=\"anti-oja\", eta=oja_eta,\n",
+    "                                                     synapse_normalization=False, bcm_theta=None,\n",
+    "                                                     mu=mu, sigma=sigma, learning_rate=learning_rate,\n",
+    "                                                     leaking_rate=leaky_rate, activation_function=activation_function,\n",
+    "                                                     )\n",
+    "            _ = reservoir.fit(unsupervised_pretrain, warmup=100)\n",
     "        else:\n",
     "            reservoir = init_reservoir(W, Win, bias, leaky_rate, activation_function)\n",
     "        readout = init_readout(ridge_coef=RIDGE_COEF)\n",
@@ -528,8 +504,7 @@
     "        # TRAINING and EVALUATION\n",
     "        if is_instances_classification:\n",
     "            mode = \"sequence-to-vector\"\n",
-    "            train_model_for_classification(reservoir, readout, train_data, Y_train[i], n_jobs=nb_jobs_per_trial,\n",
-    "                                           mode=mode)\n",
+    "            train_model_for_classification(reservoir, readout, train_data, Y_train[i], n_jobs=nb_jobs_per_trial, mode=mode)\n",
     "\n",
     "            Y_pred = predict_model_for_classification(reservoir, readout, val_data, n_jobs=nb_jobs_per_trial, mode=mode)\n",
     "            score = compute_score(Y_pred, Y_val[i], is_instances_classification)\n",
@@ -592,6 +567,55 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "97544f28-0c1a-431a-aa3c-fada8bd1f6b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b9c5da38d03c3c0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ebcb014a0bbec3b",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-24T22:43:44.927013Z",
+     "start_time": "2025-03-24T22:43:43.868034Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "from datetime import datetime\n",
+    "\n",
+    "from performances.utility import retrieve_best_model\n",
+    "\n",
+    "# Create an empty DataFrame to store the results\n",
+    "columns = ['Dataset', 'Function', 'Average Score', 'Standard Deviation', 'Date']\n",
+    "variate_type = \"multi\"  # \"multi\" or \"uni\"\n",
+    "\n",
+    "for dataset_name in [\"CatsDogs\", \"JapaneseVowels\", \"SpokenArabicDigits\", \"FSDD\", \"SPEECHCOMMANDS\", \"MackeyGlass\", \"Lorenz\", \"Sunspot_daily\"]:\n",
+    "    for function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja_fast\",  \"ip-anti-oja_fast\", \"hadsp\", \"desp\"]: # \"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja_fast\",  \"ip-anti-oja_fast\", \"hadsp\", \"desp\"\n",
+    "        is_multivariate = True\n",
+    "        study = retrieve_best_model(function_name, dataset_name, is_multivariate, variate_type = \"multi\", data_type = \"normal\")\n",
+    "        # get the best trial score and print it\n",
+    "        best_trial = study.best_trial\n",
+    "        best_score = best_trial.value\n",
+    "        print(f\"{dataset_name} {function_name}: {best_score}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "482b272afbda899e",
    "metadata": {},
    "outputs": [],
    "source": []
