--- a/3.test performances.ipynb
+++ b/3.test performances.ipynb
@@ -6,8 +6,8 @@
    "id": "88f790cf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-14T10:28:28.190148Z",
-     "start_time": "2025-03-14T10:28:28.175615Z"
+     "end_time": "2025-03-24T22:22:04.307920Z",
+     "start_time": "2025-03-24T22:22:04.289567Z"
     },
     "tags": []
    },
@@ -29,7 +29,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "11cda032b8a2214f",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-24T22:22:04.711719Z",
+     "start_time": "2025-03-24T22:22:04.709194Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from reservoir.activation_functions import tanh, heaviside, sigmoid\n",
@@ -88,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "460ed105fb711998",
+   "id": "4bec89b5c8a84dbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,6 +104,8 @@
     "from datasets.preprocessing import scale_data\n",
     "from datasets.preprocessing import add_noise, duplicate_data\n",
     "from datasets.load_data import load_data as load_dataset\n",
+    "from sklearn.model_selection import StratifiedKFold, TimeSeriesSplit, StratifiedGroupKFold\n",
+    "from datasets.preprocessing import flexible_indexing\n",
     "\n",
     "# Define noise parameter\n",
     "noise_std = 0.001\n",
@@ -115,7 +122,7 @@
     "    freq_train_data = X_train_raw\n",
     "    flat_train_data = np.concatenate(freq_train_data, axis=0) if is_instances_classification else freq_train_data\n",
     "    extract_peak_frequencies(flat_train_data, sampling_rate, smooth=True, window_length=WINDOW_LENGTH, threshold=1e-5, nperseg=1024, visualize=False)\n",
-    "    \n",
+    "\n",
     "    if is_multivariate:\n",
     "        X_train_band, X_test_band = X_train_raw, X_test_raw\n",
     "        del X_train_raw, X_test_raw\n",
@@ -126,6 +133,7 @@
     "        del X_train_raw, X_test_raw\n",
     "    Y_train = Y_train_raw\n",
     "    del Y_train_raw\n",
+    "\n",
     "            \n",
     "    # PREPROCESSING    \n",
     "    freq_train_data = X_train_band if is_multivariate else X_train\n",
@@ -205,7 +213,9 @@
   {
    "cell_type": "markdown",
    "id": "048caacd-b461-4095-99bb-ebfbbc49cd3e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Dataset characteristics"
    ]
@@ -215,6 +225,12 @@
    "execution_count": null,
    "id": "1792b2bd-e48b-4acd-9a99-05e08ac699c3",
    "metadata": {
+    "ExecuteTime": {
+     "start_time": "2025-03-24T22:22:09.275578Z"
+    },
+    "jupyter": {
+     "is_executing": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -457,7 +473,7 @@
     "            sr = spectral_radius(W)\n",
     "            pearson_correlation, _ = pearson(states_history_multi, num_windows=1, size_window=len(states_history_multi), step_size = 1, show_progress=False)\n",
     "            CEV = squared_uncoupled_dynamics_alternative(states_history_multi, num_windows=1, size_window=len(states_history_multi), step_size = 1, show_progress=True)\n",
-    "            dcor = distance_correlation(states_history_multi, num_windows=1, size_window=len(states_history_multi), step_size = 1, show_progress=True, nb_jobs=nb_jobs)\n",
+    "            dcor = distance_correlation(states_history_multi, num_windows=1, size_window=len(states_history_multi), step_size = 1, show_progress=True, method=\"auto\", nb_jobs=nb_jobs)\n",
     "\n",
     "            spectral_radii.append(sr)\n",
     "            pearson_correlations.append(pearson_correlation[0])\n",
@@ -800,9 +816,7 @@
   {
    "cell_type": "markdown",
    "id": "e61a2af988df0f5e",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Test scores"
    ]
@@ -826,7 +840,7 @@
     "columns = ['Dataset', 'Function', 'Average Score', 'Standard Deviation', 'Date']\n",
     "variate_type = \"multi\"  # \"multi\" or \"uni\"\n",
     "\n",
-    "for dataset_name in [\"CatsDogs\"]: \n",
+    "for dataset_name in [\"SPEECHCOMMANDS\"]: \n",
     "    new_results = pd.DataFrame(columns=columns)\n",
     "    # Can be \"MackeyGlass\", \"Lorenz\", \"Sunspot_daily\", \"Henon\", \"NARMA\", \"CatsDogs\", \"JapaneseVowels\", \"SpokenArabicDigits\", \"FSDD\", \"SPEECHCOMMANDS\"\n",
     "    pretrain_data, train_data, test_data, Y_train, Y_test, is_multivariate, is_instances_classification = load_data(dataset_name, data_type, noise_std, visualize=True)\n",
@@ -996,8 +1010,7 @@
     "ax.spines['top'].set_visible(False)\n",
     "ax.spines['right'].set_visible(False)\n",
     "ax.tick_params(axis='both', labelsize=fontsize)\n",
-    "ax.set_yscale('log')\n",
-    "ax.set_xlabel('Dataset', size=fontsize)\n",
+    "\n",
     "if file_name == \"outputs/test_results_prediction.csv\":\n",
     "    plt.ylabel('NRMSE', size=fontsize)\n",
     "else:\n",
@@ -1005,7 +1018,7 @@
     "plt.legend(title='Algorithm', fontsize=fontsize)\n",
     "\n",
     "# Position x-ticks in the center of all the bars for each dataset\n",
-    "ax.set_xticks(x + width * (len(functions)-1)/2)\n",
+    "ax.set_xticks(x + width * (len(functions_order)-1)/2)\n",
     "ax.set_xticklabels(datasets)\n",
     "\n",
     "plt.tight_layout()\n",
@@ -1015,9 +1028,7 @@
   {
    "cell_type": "markdown",
    "id": "8ae919b11422d98a",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Export best parameters"
    ]
@@ -1025,7 +1036,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44fca6f143a11566",
+   "id": "19b8311b29a31c56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,19 +1051,15 @@
     "    \"SpokenArabicDigits\",\n",
     "    \"JapaneseVowels\",\n",
     "    \"FSDD\",\n",
-    "#    \"SPEECHCOMMANDS\",\n",
+    "    \"SPEECHCOMMANDS\",\n",
     "    \"CatsDogs\",\n",
     "    \"MackeyGlass\",\n",
     "    \"Lorenz\",\n",
     "    \"Sunspot_daily\",\n",
     "]\n",
     "\n",
-    "# Initialize an empty list to store results\n",
-    "results = []\n",
-    "\n",
-    "# Initialize an empty list to store results\n",
-    "results = []\n",
-    "for function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja\",  \"ip-anti-oja\", \"hadsp\", \"desp\"]:\n",
+    "for function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja_fast\",  \"ip-anti-oja_fast\", \"hadsp\", \"desp\"]:\n",
+    "    results = []\n",
     "    for dataset in datasets:\n",
     "        study = retrieve_best_model(function_name, dataset, is_multivariate=True, variate_type = \"multi\", data_type = \"normal\")\n",
     "        best_trial = study.best_trial\n",
@@ -1072,7 +1079,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3d89caef9e9bbd2",
+   "id": "4c7cec6b61c1fecd",
    "metadata": {},
    "source": [
     "# Richness"
@@ -1081,10 +1088,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebb297949e789e5e",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "2661626e2cfc509c",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -1215,6 +1220,11 @@
     "\n",
     "# Optional replacements for dataset names\n",
     "data = data[data['dataset'].isin(datasets)]\n",
+    "data['dataset'] = data['dataset'].str.replace('SpokenArabicDigits', 'Spoken\\nArabic\\nDigits')\n",
+    "data['dataset'] = data['dataset'].str.replace('SPEECHCOMMANDS', 'SPEECH\\nCOMMANDS')\n",
+    "data['dataset'] = data['dataset'].str.replace('JapaneseVowels', 'Japanese\\nVowels')\n",
+    "data['dataset'] = data['dataset'].str.replace('Sunspot_daily', 'Sunspot\\ndaily')\n",
+    "data['dataset'] = data['dataset'].str.replace('MackeyGlass', 'Mackey\\nGlass')\n",
     "\n",
     "# Apply the mapping to create a new column with descriptive labels\n",
     "data['Algorithm'] = data['function_name'].map(function_mapping)\n",
@@ -1222,7 +1232,7 @@
     "datasets = data['dataset'].unique()\n",
     "\n",
     "# Prepare color palette for the bars\n",
-    "fontsize = 22\n",
+    "fontsize = 20\n",
     "\n",
     "# Metrics to plot\n",
     "metrics = ['spectral_radius_mean', 'pearson_mean', 'CEV_mean', 'dcor_mean']\n",
@@ -1266,11 +1276,10 @@
     "\n",
     "    ax.set_xticks(x + width * (len(functions_order)-1)/2)\n",
     "\n",
-    "    ax.set_xticklabels(datasets, rotation=45, fontsize=fontsize)\n",
+    "    ax.set_xticklabels(datasets, rotation=0, fontsize=fontsize)\n",
     "\n",
     "    # Set legend with descriptive labels\n",
-    "    ax.legend(title='Algorithm', fontsize=fontsize, title_fontsize=fontsize)\n",
-    "\n",
+    "    ax.legend(title='Algorithm', fontsize=14, title_fontsize=14, bbox_to_anchor=(0.5, 1.15), loc='upper center', ncol=len(functions_order))\n",
     "    # Improve aesthetics by removing top and right spines\n",
     "    ax.spines['top'].set_visible(False)\n",
     "    ax.spines['right'].set_visible(False)\n",
@@ -1283,9 +1292,7 @@
   {
    "cell_type": "markdown",
    "id": "f86a468b-42a9-4c8e-ae77-cc0ebfaba1ae",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Final matrix"
    ]
@@ -1319,7 +1326,7 @@
     "    \"Lorenz\",\n",
     "    \"Sunspot_daily\",\n",
     "]\n",
-    "datasets=classification\n",
+    "datasets=prediction\n",
     "\n",
     "\n",
     "# Initialize lists to store results and max values\n",
@@ -1534,6 +1541,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6d505632-3b59-41d6-9aa5-18dd42c8a5ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "821d76b8-70f0-4152-80d7-c95dd62e1ad5",
    "metadata": {},
    "outputs": [],
    "source": []
