--- a/1.general_framework.ipynb
+++ b/1.general_framework.ipynb
@@ -41,47 +41,10 @@
    "id": "00291787-4082-48ea-9002-54d777cac5b6",
    "metadata": {},
    "source": [
-    "## Prediction ahead\n",
-    "\n",
-    "Datasets available :\n",
+    "Forecasting datasets available :\n",
     "\n",
     "* ReservoirPy: MackeyGlass, Lorenz\n",
     "* Custom: Sunspot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "706b626a-8fa9-452d-bc75-6e2fe38ca27a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datasets.load_forecasting import load_dataset_forecasting\n",
-    "is_instances_classification = False\n",
-    "dataset_name = \"NARMA\"\n",
-    "step_ahead=5\n",
-    "\n",
-    "is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test = load_dataset_forecasting(dataset_name, step_ahead, visualize=True)\n",
-    "use_spectral_representation = False\n",
-    "spectral_representation = None # Can be None, \"stft\" or \"mfcc\"\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a5ae6a7ebe247f27",
-   "metadata": {
-    "collapsed": false,
-    "editable": true,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "source": [
-    "## Classification"
    ]
   },
   {
@@ -89,7 +52,7 @@
    "id": "a741331a-93ba-4132-8449-0e9521c4ddcc",
    "metadata": {},
    "source": [
-    "Datasets available :\n",
+    "Classification Datasets available :\n",
     "\n",
     "* Custom :  FSDD, HAART, JapaneseVowels\n",
     "* Aeon : SpokenArabicDigits, CatsDogs, LSST\n",
@@ -99,25 +62,27 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "4be2c9b0-f2e3-4571-b7eb-6064bcb7dcf9",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "032bec81-1517-4dae-9a6f-9a49ea4b2d6c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-24T21:31:33.123019Z",
+     "start_time": "2025-03-24T21:31:32.563557Z"
+    }
+   },
+   "outputs": [],
    "source": [
-    "from datasets.load_classification import load_dataset_classification\n",
-    "is_instances_classification = True\n",
-    "spectral_representation = \"mfcc\"  # Can be None, \"stft\" or \"mfcc\"\n",
+    "from datasets.load_data import load_data as load_dataset\n",
+    "from datasets.preprocessing import plot_classes_distribution\n",
     "\n",
+    "step_ahead=5\n",
     "dataset_name = \"FSDD\"\n",
     "\n",
-    "use_spectral_representation, is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name)\n"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "522bc04e-ca9d-4372-ac7e-eaa5a560099d",
-   "metadata": {},
-   "source": [
-    "from datasets.preprocessing import plot_classes_distribution\n",
+    "(is_instances_classification, is_multivariate, sampling_rate,\n",
+    "     X_train_raw, X_test_raw, Y_train_raw, Y_test,\n",
+    "     use_spectral_representation, spectral_representation,\n",
+    "     groups) = load_dataset(dataset_name, step_ahead, visualize=False)\n",
     "\n",
     "# Plot data distribution\n",
     "if is_instances_classification:\n",
@@ -146,7 +111,7 @@
     "# SEED\n",
     "SEED = 49387\n",
     "\n",
-    "use_cross_validation = True\n",
+    "use_cross_validation = False\n",
     "\n",
     "n_splits=2\n",
     "\n",
@@ -334,11 +299,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3feec40f-0a7c-44bf-b9e2-cbf3cd5d275e",
+   "cell_type": "raw",
+   "id": "53edf7c4-a4c4-45b8-acdc-00e61e73c32a",
    "metadata": {},
-   "outputs": [],
    "source": [
     "\n",
     "# Define the range around the merge point to plot\n",
@@ -358,11 +321,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71a1a304-8116-4cb3-a473-1b71329335fd",
+   "cell_type": "raw",
+   "id": "6eecde7e-5702-45b7-9691-f8134fe90ccc",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Concatenate train and test arrays for plotting\n",
     "combined_data = np.concatenate((X_train_band, X_val_band), axis=0)\n",
@@ -962,9 +923,10 @@
    "source": [
     "from reservoir.reservoir import init_matrices\n",
     "from scipy import sparse\n",
+    "from scipy import stats\n",
     "\n",
     "# To set particular values\n",
-    "function_name = \"random\"  # \"desp\" ou \"hadsp\" or \"random\"\n",
+    "function_name = \"random_ee\"  # \"desp\" ou \"hadsp\" or \"random\"\n",
     "study = retrieve_best_model(function_name, dataset_name, is_multivariate, variate_type = \"multi\", data_type = \"normal\")\n",
     "\n",
     "# Print the best hyperparameters\n",
@@ -977,13 +939,28 @@
     "if not is_instances_classification:\n",
     "    use_full_instance = None\n",
     "\n",
-    "Win_random_multi, W_random_multi, bias_random_multi = init_matrices(n, 1, random_esn[\"connectivity\"], K, seed=19823)\n",
+    "if function_name == \"random_ee\":\n",
+    "    Win_random_multi, W_random_multi, bias_random_multi = init_matrices(n, input_connectivity, random_esn['connectivity'],  K, w_distribution=stats.uniform(loc=0, scale=1), seed=57489)\n",
+    "else:\n",
+    "    Win_random_multi, W_random_multi, bias_random_multi = init_matrices(n, input_connectivity, random_esn['connectivity'],  K, w_distribution=stats.uniform(loc=-1, scale=2), seed=57489)\n",
+    "      \n",
     "bias_random_multi= bias_random_multi*random_esn['bias_scaling']\n",
     "Win_random_multi= Win_random_multi*random_esn['input_scaling']\n",
     "\n",
     "\n",
     "eigen_random_multi = sparse.linalg.eigs(W_random_multi, k=1, which=\"LM\", maxiter=W_random_multi.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
-    "sr_random_multi = np.max(np.abs(eigen_random_multi))\n"
+    "sr_random_multi = np.max(np.abs(eigen_random_multi))\n",
+    "W_random_multi = W_random_multi * sr_random_multi / eigen_random_multi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10992886-1d95-43a3-bc8c-984c128435fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W_random_multi"
    ]
   },
   {
@@ -1097,8 +1074,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from analysis.richness import pearson\n",
-    "num_windows = 150"
+    "from analysis.richness import pearson, distance_correlation\n",
+    "num_windows = 150\n",
+    "size_window = 500\n"
    ]
   },
   {
@@ -1108,7 +1086,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mean_correlations_hag, std_correlations_hag = pearson(state_history_hag, num_windows=num_windows)"
+    "mean_correlations_hag, std_correlations_hag = pearson(state_history_hag, size_window=size_window, num_windows=num_windows)"
    ]
   },
   {
@@ -1173,19 +1151,19 @@
     "\n",
     "states_history_random = []\n",
     "neurons_state = np.random.uniform(0, 1, bias_random_multi.size)\n",
-    "inputs = np.concatenate(X_pretrain_band, axis=0) if is_instances_classification else np.array(X_pretrain_band)\n",
+    "inputs = np.concatenate(X_pretrain_band, axis=0) if is_instances_classification else X_pretrain_band\n",
     "for input_value in inputs:\n",
     "    neurons_state = update_reservoir(W_random_multi, Win_random_multi, input_value, neurons_state, leaky_rate, bias_random_multi, activation_function)\n",
     "    states_history_random.append(neurons_state)\n",
     "\n",
-    "mean_correlations_random, std_correlations_random = pearson(np.array(states_history_random), num_windows=num_windows)\n",
+    "mean_correlations_random, std_correlations_random = pearson(states_history_random, num_windows=num_windows)\n",
     "\n",
     "\n",
     "# Plotting the mean correlations with the standard deviation area\n",
     "fig, ax = plt.subplots(figsize=(10, 5))\n",
     "\n",
     "time_windows = range(num_windows)\n",
-    "plt.plot(time_windows, mean_correlations_random, marker='.', linestyle='-', color='g',  label=\"with same input for random matrice\")\n",
+    "plt.plot(time_windows, mean_correlations_random, marker='.', linestyle='-', color='g',  label=\"with same input for random matrix\")\n",
     "plt.fill_between(time_windows, np.array(mean_correlations_random) - np.array(std_correlations_random),\n",
     "                 np.array(mean_correlations_random) + np.array(std_correlations_random), color='g', alpha=0.2)\n",
     "plt.ylim(0, 1)\n",
@@ -1392,12 +1370,12 @@
     "reload(analysis.richness)\n",
     "from analysis.richness import squared_uncoupled_dynamics\n",
     "\n",
-    "uds_random = squared_uncoupled_dynamics_alternative(np.array(states_history_random), size_window=500, num_windows=num_windows, A=0.99)\n",
+    "uds_random = squared_uncoupled_dynamics_alternative(states_history_random, size_window=500, num_windows=num_windows, A=0.99)\n",
     "\n",
     "# Plotting the mean correlations with the standard deviation area\n",
     "fig, ax = plt.subplots(figsize=(10, 5))\n",
     "\n",
-    "plt.plot(range(len(uds_random)), uds_random, marker='.', linestyle='-', color='g',  label=\"with same input for random matrice\")\n",
+    "plt.plot(range(len(uds_random)), uds_random, marker='.', linestyle='-', color='g',  label=\"with same input for random matrix\")\n",
     "\n",
     "fontsize=18\n",
     "ax.spines['top'].set_visible(False)\n",
